--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
   <h1> ACTIVIDAD 2 HTML</h1>
   <hr>
-  <h2>Body</h2>
+  <h2> <class1> Body</h2>
+
   <p>Es el cuerpo o contenido de nuestra página WEB.</p>
   <br> 
-  <h2> HEAD </h2>
+  <h2> <class2> HEAD </h2>
   <p> Es la cabecera de un sitio web que ayuda a darle formalidad y mejorar la experiencia del usuario, en esta se anidan las etiquetas que ayudan a lo que antes mencionado.(meta, link, title). </p>
   <br>
   <h2> H1, H2, H3, H4, H5, H6 </h2>
